--- a/src/main/resources/docgen/templates/dl22-doc-segmented-unicoil-noexp-0shot-v2.template
+++ b/src/main/resources/docgen/templates/dl22-doc-segmented-unicoil-noexp-0shot-v2.template
@@ -1,8 +1,8 @@
-# Anserini Regressions: TREC 2021 Deep Learning Track (Document)
+# Anserini Regressions: TREC 2022 Deep Learning Track (Document)
 
-**Model**: uniCOIL (without any expansions) zero-shot on segmented documents (segment-only encoding) - _Deprecated_, see below
+**Model**: uniCOIL (without any expansions) zero-shot on segmented documents (title/segment encoding)
 
-This page describes experiments, integrated into Anserini's regression testing framework, on the [TREC 2021 Deep Learning Track document ranking task](https://trec.nist.gov/data/deep2021.html) using the MS MARCO V2 _segmented_ document corpus.
+This page describes experiments, integrated into Anserini's regression testing framework, on the [TREC 2022 Deep Learning Track document ranking task](https://trec.nist.gov/data/deep2022.html) using the MS MARCO V2 _segmented_ document corpus.
 Here, we cover experiments with the uniCOIL model trained on the MS MARCO V1 passage ranking test collection, applied in a zero-shot manner, without any expansions.
 
 The uniCOIL model is described in the following paper:
@@ -11,8 +11,7 @@ The uniCOIL model is described in the following paper:
 
 **NOTE**: As an important detail, there is the question of what text we feed into the encoder to generate document representations.
 Initially, we fed only the segment text, but later we realized that prepending the title of the document improves effectiveness.
-This regression captures segment-only encoding and is kept around primarily for archival purposes; you probably don't want to use this one unless you're running ablation experiments.
-The version that uses title/segment encoding can be found [here](regressions-dl21-doc-segmented-unicoil-noexp-0shot-v2.md).
+This regression captures the latter title/segment encoding, which for clarity we call v2, distinguished from segment-only encoding, which does not have a corresponding regression.
 
 For additional instructions on working with the MS MARCO V2 document corpus, refer to [this page](${root_path}/docs/experiments-msmarco-v2.md).
 
@@ -53,7 +52,7 @@ tar -xvf collections/${download_corpus}.tar -C collections/
 mv collections/${download_corpus} collections/${corpus}
 ```
 
-To confirm, `${download_corpus}.tar` is 54 GB and has an MD5 checksum of `${download_checksum}`.
+To confirm, `${download_corpus}.tar` is 55 GB and has an MD5 checksum of `${download_checksum}`.
 With the corpus downloaded, the following command will perform the remaining steps below:
 
 ```bash
@@ -79,7 +78,7 @@ For additional details, see explanation of [common indexing options](${root_path
 ## Retrieval
 
 Topics and qrels are stored [here](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels), which is linked to the Anserini repo as a submodule.
-The regression experiments here evaluate on the 57 topics for which NIST has provided judgments as part of the [TREC 2021 Deep Learning Track](https://trec.nist.gov/data/deep2021.html).
+The regression experiments here evaluate on the 76 topics for which NIST has provided these _inferred_ judgments as part of the [TREC 2022 Deep Learning Track](https://trec.nist.gov/data/deep2022.html).
 
 After indexing has completed, you should be able to perform retrieval as follows:
 
@@ -98,6 +97,3 @@ ${eval_cmds}
 With the above commands, you should be able to reproduce the following results:
 
 ${effectiveness}
-
-This run roughly corresponds to run `p_unicoil0` submitted to the TREC 2021 Deep Learning Track under the "baseline" group.
-The difference is that here we are using pre-encoded queries, whereas the official submission performed query encoding on the fly.
