--- a/src/main/resources/docgen/templates/msmarco-v2-passage-splade-pp-ed-onnx.template
+++ b/src/main/resources/docgen/templates/msmarco-v2-passage-splade-pp-ed-onnx.template
@@ -1,8 +1,8 @@
 # Anserini Regressions: MS MARCO (V2) Passage Ranking
 
-**Model**: SPLADE++ CoCondenser-SelfDistil (using pre-encoded queries)
+**Model**: SPLADE++ CoCondenser-EnsembleDistil (using ONNX for on-the-fly query encoding)
 
-This page describes regression experiments, integrated into Anserini's regression testing framework, applying the [SPLADE++ CoCondenser-SelfDistil](https://huggingface.co/naver/splade-cocondenser-selfdistil) model to the MS MARCO V2 passage corpus.
+This page describes regression experiments, integrated into Anserini's regression testing framework, applying the [SPLADE++ CoCondenser-EnsembleDistil](https://huggingface.co/naver/splade-cocondenser-ensembledistil) model to the MS MARCO V2 passage corpus.
 Here, we evaluate on the dev queries.
 
 The model can be described in the following paper:
@@ -10,7 +10,7 @@ The model can be described in the following paper:
 > Thibault Formal, Carlos Lassance, Benjamin Piwowarski, and Stéphane Clinchant. [From Distillation to Hard Negative Sampling: Making Sparse Neural IR Models More Effective.](https://dl.acm.org/doi/10.1145/3477495.3531857) _Proceedings of the 45th International ACM SIGIR Conference on Research and Development in Information Retrieval_, pages 2353–2359.
 
 For additional instructions on working with the MS MARCO V2 passage corpus, refer to [this page](${root_path}/docs/experiments-msmarco-v2.md).
-In these experiments, we are using pre-encoded queries (i.e., cached results of query encoding).
+In these experiments, we are using ONNX to perform query encoding on the fly.
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead and then run `bin/build.sh` to rebuild the documentation.
@@ -21,7 +21,7 @@ From one of our Waterloo servers (e.g., `orca`), the following command will perf
 python src/main/python/run_regression.py --index --verify --search --regression ${test_name}
 ```
 
-We make available a version of the corpus that has already been encoded with SPLADE++ CoCondenser-SelfDistil.
+We make available a version of the corpus that has already been encoded with SPLADE++ CoCondenser-EnsembleDistil.
 
 From any machine, the following command will download the corpus and perform the complete regression, end to end:
 
@@ -40,7 +40,7 @@ wget ${download_url} -P collections/
 tar xvf collections/${download_corpus}.tar -C collections/
 ```
 
-To confirm, `${download_corpus}.tar` is 76 GB and has MD5 checksum `${download_checksum}`.
+To confirm, `${download_corpus}.tar` is 66 GB and has MD5 checksum `${download_checksum}`.
 With the corpus downloaded, the following command will perform the remaining steps below:
 
 ```bash
