--- a/src/main/resources/docgen/templates/msmarco-v2-passage-splade-pp-ed.template
+++ b/src/main/resources/docgen/templates/msmarco-v2-passage-splade-pp-ed.template
@@ -1,6 +1,6 @@
 # Anserini Regressions: MS MARCO (V2) Passage Ranking
 
-**Model**: SPLADE++ CoCondenser-EnsembleDistil
+**Model**: SPLADE++ CoCondenser-EnsembleDistil (using pre-encoded queries)
 
 This page describes regression experiments, integrated into Anserini's regression testing framework, applying the [SPLADE++ CoCondenser-EnsembleDistil](https://huggingface.co/naver/splade-cocondenser-ensembledistil) model to the MS MARCO V2 passage corpus.
 Here, we evaluate on the dev queries.
@@ -10,6 +10,7 @@ The model can be described in the following paper:
 > Thibault Formal, Carlos Lassance, Benjamin Piwowarski, and Stéphane Clinchant. [From Distillation to Hard Negative Sampling: Making Sparse Neural IR Models More Effective.](https://dl.acm.org/doi/10.1145/3477495.3531857) _Proceedings of the 45th International ACM SIGIR Conference on Research and Development in Information Retrieval_, pages 2353–2359.
 
 For additional instructions on working with the MS MARCO V2 passage corpus, refer to [this page](${root_path}/docs/experiments-msmarco-v2.md).
+In these experiments, we are using pre-encoded queries (i.e., cached results of query encoding).
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead and then run `bin/build.sh` to rebuild the documentation.
@@ -83,7 +84,3 @@ ${eval_cmds}
 With the above commands, you should be able to reproduce the following results:
 
 ${effectiveness}
-
-## Reproduction Log[*](${root_path}/docs/reproducibility.md)
-
-To add to this reproduction log, modify [this template](${template}) and run `bin/build.sh` to rebuild the documentation.
