--- a/src/main/java/io/anserini/demo/pom.xml
+++ b/src/main/java/io/anserini/demo/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>anserini</artifactId>
             <version>0.24.2</version>
         </dependency>
+		<dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.17.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
