--- a/src/main/resources/docgen/templates/dl22-doc.template
+++ b/src/main/resources/docgen/templates/dl22-doc.template
@@ -6,7 +6,7 @@ This page describes experiments, integrated into Anserini's regression testing f
 For additional instructions on working with the MS MARCO V2 document corpus, refer to [this page](${root_path}/docs/experiments-msmarco-v2.md).
 
 Note that the NIST relevance judgments provide far more relevant documents per topic, unlike the "sparse" judgments provided by Microsoft (these are sometimes called "dense" judgments to emphasize this contrast).
-However, it is important to understand that these document judgments were inferred from the passages.
+An important caveat is that these document judgments were inferred from the passages.
 That is, if a passage is relevant, the document containing it is considered relevant.
 
 Note that there are four different bag-of-words regression conditions for this task, and this page describes the following:
