--- a/src/main/resources/docgen/templates/dl22-passage-splade-pp-ed-onnx.template
+++ b/src/main/resources/docgen/templates/dl22-passage-splade-pp-ed-onnx.template
@@ -1,9 +1,9 @@
 # Anserini Regressions: TREC 2022 Deep Learning Track (Passage)
 
-**Model**: SPLADE++ CoCondenser-EnsembleDistil (using pre-encoded queries)
+**Model**: SPLADE++ CoCondenser-EnsembleDistil (using ONNX for on-the-fly query encoding)
 
 This page describes baseline experiments, integrated into Anserini's regression testing framework, on the [TREC 2022 Deep Learning Track passage ranking task](https://trec.nist.gov/data/deep2022.html) using the MS MARCO V2 passage corpus.
-Here, we cover experiments with the [SPLADE++ CoCondenser-EnsembleDistil](https://huggingface.co/naver/splade-cocondenser-ensembledistil) model, using pre-encoded queries (i.e., cached results of query encoding).
+Here, we cover experiments with the [SPLADE++ CoCondenser-EnsembleDistil](https://huggingface.co/naver/splade-cocondenser-ensembledistil) model, using ONNX to perform query encoding on the fly.
 
 The model is described in the following paper:
 
