--- a/src/main/resources/docgen/templates/dl23-doc-segmented-d2q-t5.template
+++ b/src/main/resources/docgen/templates/dl23-doc-segmented-d2q-t5.template
@@ -39,7 +39,7 @@ For additional details, see explanation of [common indexing options](${root_path
 ## Retrieval
 
 Topics and qrels are stored [here](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels), which is linked to the Anserini repo as a submodule.
-The regression experiments here evaluate on the 57 topics for which NIST has provided these _inferred_ judgments as part of the [TREC 2023 Deep Learning Track](https://trec.nist.gov/data/deep2023.html).
+The regression experiments here evaluate on the 82 topics for which NIST has provided _inferred_ judgments as part of the [TREC 2023 Deep Learning Track](https://trec.nist.gov/data/deep2023.html).
 
 After indexing has completed, you should be able to perform retrieval as follows:
 
