--- a/src/main/resources/docgen/templates/dl23-passage-splade-pp-sd.template
+++ b/src/main/resources/docgen/templates/dl23-passage-splade-pp-sd.template
@@ -1,9 +1,9 @@
 # Anserini Regressions: TREC 2023 Deep Learning Track (Passage)
 
-**Model**: SPLADE++ CoCondenser-EnsembleDistil (using ONNX for on-the-fly query encoding)
+**Model**: SPLADE++ CoCondenser-SelfDistil (using pre-encoded queries)
 
 This page describes baseline experiments, integrated into Anserini's regression testing framework, on the [TREC 2023 Deep Learning Track passage ranking task](https://trec.nist.gov/data/deep2023.html) using the MS MARCO V2 passage corpus.
-Here, we cover experiments with the [SPLADE++ CoCondenser-EnsembleDistil](https://huggingface.co/naver/splade-cocondenser-ensembledistil) model, using ONNX to perform query encoding on the fly.
+Here, we cover experiments with the [SPLADE++ CoCondenser-SelfDistil](https://huggingface.co/naver/splade-cocondenser-selfdistil) model, using pre-encoded queries (i.e., cached results of query encoding).
 
 The model is described in the following paper:
 
@@ -22,7 +22,7 @@ From one of our Waterloo servers (e.g., `orca`), the following command will perf
 python src/main/python/run_regression.py --index --verify --search --regression ${test_name}
 ```
 
-We make available a version of the corpus that has already been encoded with SPLADE++ CoCondenser-EnsembleDistil.
+We make available a version of the corpus that has already been encoded with SPLADE++ CoCondenser-SelfDistil.
 
 From any machine, the following command will download the corpus and perform the complete regression, end to end:
 
@@ -41,7 +41,7 @@ wget ${download_url} -P collections/
 tar xvf collections/${download_corpus}.tar -C collections/
 ```
 
-To confirm, `${download_corpus}.tar` is 66 GB and has MD5 checksum `${download_checksum}`.
+To confirm, `${download_corpus}.tar` is 76 GB and has MD5 checksum `${download_checksum}`.
 With the corpus downloaded, the following command will perform the remaining steps below:
 
 ```bash
