--- a/src/main/resources/regression/dl22-passage-splade-pp-ed-onnx.yaml
+++ b/src/main/resources/regression/dl22-passage-splade-pp-ed-onnx.yaml
@@ -61,7 +61,7 @@ topics:
     qrel: qrels.dl22-passage.txt
 
 models:
-  - name: splade-pp-ed
+  - name: splade-pp-ed-onnx
     display: SPLADE++ CoCondenser-EnsembleDistil
     params: -parallelism 16 -impact -pretokenized -encoder SpladePlusPlusEnsembleDistil
     results:
@@ -75,7 +75,7 @@ models:
         - 0.3747
       R@1000:
         - 0.6628
-  - name: splade-pp-ed+rm3
+  - name: splade-pp-ed-onnx+rm3
     display: +RM3
     params: -parallelism 16 -impact -pretokenized -encoder SpladePlusPlusEnsembleDistil -rm3 -collection JsonVectorCollection
     results:
@@ -89,7 +89,7 @@ models:
         - 0.3565
       R@1000:
         - 0.6375
-  - name: splade-pp-ed+rocchio
+  - name: splade-pp-ed-onnx+rocchio
     display: +Rocchio
     params: -parallelism 16 -impact -pretokenized -encoder SpladePlusPlusEnsembleDistil -rocchio -collection JsonVectorCollection
     results:
