--- a/src/main/resources/regression/dl22-passage-splade-pp-sd-onnx.yaml
+++ b/src/main/resources/regression/dl22-passage-splade-pp-sd-onnx.yaml
@@ -61,7 +61,7 @@ topics:
     qrel: qrels.dl22-passage.txt
 
 models:
-  - name: splade-pp-sd
+  - name: splade-pp-sd-onnx
     display: SPLADE++ CoCondenser-SelfDistil
     params: -parallelism 16 -impact -pretokenized -encoder SpladePlusPlusSelfDistil
     results:
@@ -75,7 +75,7 @@ models:
         - 0.3670
       R@1000:
         - 0.6549
-  - name: splade-pp-sd+rm3
+  - name: splade-pp-sd-onnx+rm3
     display: +RM3
     params: -parallelism 16 -impact -pretokenized -encoder SpladePlusPlusSelfDistil -rm3 -collection JsonVectorCollection
     results:
@@ -89,7 +89,7 @@ models:
         - 0.3688
       R@1000:
         - 0.6357
-  - name: splade-pp-sd+rocchio
+  - name: splade-pp-sd-onnx+rocchio
     display: +Rocchio
     params: -parallelism 16 -impact -pretokenized -encoder SpladePlusPlusSelfDistil -rocchio -collection JsonVectorCollection
     results:
