--- a/src/main/resources/regression/dl22-passage-splade-pp-sd.yaml
+++ b/src/main/resources/regression/dl22-passage-splade-pp-sd.yaml
@@ -61,7 +61,7 @@ topics:
     qrel: qrels.dl22-passage.txt
 
 models:
-  - name: splade-pp-sd
+  - name: splade-pp-sd-cached_q
     display: SPLADE++ CoCondenser-SelfDistil
     params: -parallelism 16 -impact -pretokenized
     results:
@@ -75,7 +75,7 @@ models:
         - 0.3681
       R@1000:
         - 0.6551
-  - name: splade-pp-sd+rm3
+  - name: splade-pp-sd-cached_q+rm3
     display: +RM3
     params: -parallelism 16 -impact -pretokenized -rm3 -collection JsonVectorCollection
     results:
@@ -89,7 +89,7 @@ models:
         - 0.3693
       R@1000:
         - 0.6350
-  - name: splade-pp-sd+rocchio
+  - name: splade-pp-sd-cached_q+rocchio
     display: +Rocchio
     params: -parallelism 16 -impact -pretokenized -rocchio -collection JsonVectorCollection
     results:
