--- a/src/main/resources/regression/dl23-passage-splade-pp-sd-onnx.yaml
+++ b/src/main/resources/regression/dl23-passage-splade-pp-sd-onnx.yaml
@@ -61,7 +61,7 @@ topics:
     qrel: qrels.dl23-passage.txt
 
 models:
-  - name: splade-pp-sd
+  - name: splade-pp-sd-onnx
     display: SPLADE++ CoCondenser-SelfDistil
     params: -parallelism 16 -impact -pretokenized -encoder SpladePlusPlusSelfDistil
     results:
@@ -75,7 +75,7 @@ models:
         - 0.4137
       R@1000:
         - 0.6731
-  - name: splade-pp-sd+rm3
+  - name: splade-pp-sd-onnx+rm3
     display: +RM3
     params: -parallelism 16 -impact -pretokenized -encoder SpladePlusPlusSelfDistil -rm3 -collection JsonVectorCollection
     results:
@@ -89,7 +89,7 @@ models:
         - 0.3892
       R@1000:
         - 0.6486
-  - name: splade-pp-sd+rocchio
+  - name: splade-pp-sd-onnx+rocchio
     display: +Rocchio
     params: -parallelism 16 -impact -pretokenized -encoder SpladePlusPlusSelfDistil -rocchio -collection JsonVectorCollection
     results:
