--- a/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot.yaml
@@ -58,7 +58,7 @@ topics:
     qrel: qrels.msmarco-v2-doc.dev2.txt
 
 models:
-  - name: unicoil-0shot
+  - name: unicoil-0shot-cached_q
     display: uniCOIL (with doc2query-T5) zero-shot
     params: -parallelism 16 -impact -pretokenized -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
